--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -8,7 +8,10 @@
 \usepackage{subfigure}
 \usepackage{comment}
 \usepackage[cmex10]{amsmath}
+\usepackage{colortbl}
 
+\definecolor{darkgray}{gray}{0.7}
+\definecolor{lightgray}{gray}{0.9}
 
 \bibliographystyle{IEEEtran}
 
@@ -31,7 +34,8 @@
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
-		\kento{Use titech email address ! } \\
+		\kento{Begins form ``J" instead of ``j" ?}
+		\\
 	Email: Jyo.t.aa@m.titech.ac.jp}
 	\and
 	\IEEEauthorblockN{Kento Sato}
@@ -53,7 +57,7 @@
 
 %start abstract
 \begin{abstract}
-
+\kento{I'd like to shorten this abstract \ldots}
 Cloud computing offers high computational resources, scalability, as well as
 ease of access.
 %Such cloud environments offer those who have limited local computational
