--- a/paper/src/ref/reference.bib
+++ b/paper/src/ref/reference.bib
@@ -6,6 +6,16 @@
 	refdate = ""
 }
 
+@INPROCEEDINGS{A_User-Level_InfiniBand-Based_File_System_and_Checkpoint_Strategy_for_Burst_Buffers,
+author={Sato, K. and Mohror, K. and Moody, A. and Gamblin, T. and de Supinski, B.R. and Maruyama, N. and Matsuoka, S.}, 
+booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2014 14th IEEE/ACM International Symposium on}, 
+title={A User-Level InfiniBand-Based File System and Checkpoint Strategy for Burst Buffers}, 
+year={2014}, 
+month={May}, 
+pages={21-30}, 
+keywords={checkpointing;fault tolerant computing;parallel processing;storage management;IBIO;burst buffers;checkpoint strategy;checkpoint-restart techniques;dedicated storage resources;fault tolerance technique;high-performance computing applications;large-scale systems;node-local storage;parallel file system;user-level InfiniBand-based file system;Bandwidth;Buffer storage;Checkpointing;Computational modeling;Instruction sets;Reliability;Servers;burst buffer;checkpoint/restart;fault tolerance}, 
+doi={10.1109/CCGrid.2014.24},}
+
 @webpage{sshfs,
 	author = "Miklos Szeredi",
 	title = "SSH Filesystem",
@@ -284,7 +294,7 @@ keywords = {Cloud Computing, Multicast Algorithm, Amazon EC2/S3, Work Stealing},
 	ISSN={2160-195X},
 }
 @webpage{povray,
-	title = "Pov Ray",
+	title = "POV-Ray",
 	organization ="",
 	url = "http://www.povray.org/",
 	refdate = "",
