--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -364,5 +364,6 @@ and high scalability on the fly.
 % network) and storage(S3) ? People will think this comparison is unfair, and no
 % meaning unless you mention that. This subsection looks weird to me because this
 % section does not have any ``topic sentence'' and ``so what ?'' sentence}
-
+\subsection{Challenges in Cloud-based Burst Buffers}
+\kento{focus is modeling because \ldots}
 
