Removed architecture.tex, and update background & implementation.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -122,7 +122,7 @@ simulation results.}
 \input{src/background.tex}
 
 %section III
-\input{src/architecture.tex}
+%\input{src/architecture.tex}
 
 %section IV
 \input{src/implementation.tex}
