--- a/paper/src/architecture.tex
+++ b/paper/src/architecture.tex
@@ -1,9 +1,12 @@
-\section{Cloud-based Buffer Burst System}
+\section{Cloud-based Burst Buffer System}
 \label{sec:architecture}
-\kento{This section need to be totally reorganized. But please resolve my
-comments first}
-\kento{In this section, we need to describe information, which should be
-written in ``Users' manual'', not ``Developers' document''}
+% \kento{This section need to be totally reorganized. But please resolve my
+% comments first}
+% \kento{In this section, we need to describe information, which should be
+% written in ``Users' manual'', not ``Developers' document''}
+To validate the effectiveness of our cloud-based burst buffer system.
+We design and implement a prototype of the system. In this section, we describe
+the design.
 %\begin
 \subsection{Overview}
 \kento{
@@ -15,6 +18,62 @@ written in ``Users' manual'', not ``Developers' document''}
   \item What is the difference to conventional burst buffers 
 \end{itemize}
 }
+% An overview of I/O burst buffer architecture is described in this section.
+% As we mentioned in the previous section, our model takes advantage of high
+% throughput inside a system, and use buffer queue system in order to increase
+% throughput between two systems.
+% %Two kinds of buffer are used in our I/O burst buffer architecture, the first one is in client computing node, first buffer user I/O in the same node, another one is in I/O buffer nodes.
+% The main idea is that some of computing nodes serve as a I/O buffer nodes in
+% each system, for write I/O data, if buffer queue in I/O buffer nodes is not
+% full, data can first be buffered in buffer queue in the same system, and then client can finish write operation without waiting data be finally transferred to storage system.
+% Actually, since many jobs use multiple nodes work together and the output of some nodes can be the
+% input of the others, so for most cases, output data will still be buffered in
+% buffer queue until the whole job finished.
+% As for reading, if that file is stored in the buffer queue, compute nodes can
+% read from I/O nodes through interconnection network.
+% In other cases (buffer queue is full when issue a write request or requested
+% file is not stored in buffer queue when issue a read request we call it cache
+% miss), a read from or write back operation described below will be executed.
+
+\begin{figure}[tb]
+	\centering
+	\includegraphics[width=8cm]{img/architecture_overview}
+	\caption{overall illustrate of I/O Burst Buffer Architecture}
+	\label{architecture:overview}
+\end{figure}
+
+Figure \ref{architecture:overview} shows a design overview of our cloud-based
+burst buffer system, which consist of \emph{compute nodes}, \emph{burst buffers}
+and a \emph{shared cloud storage}. \emph{Compute nodes} are nodes on which
+applications run. \emph{Burst buffers} are provided by the same instances
+as \emph{compute nodes}. Unlike \emph{compute nodes}, The instances
+of the \emph{burst buffers} provide remote memory buffers for data caching.
+When the applications read or write data, the I/O operations are handled via
+\emph{burst buffers}.  The \emph{shared cloud storage} is persistent shared storage such as Amazon S3.
+Because the applications read or write all data via the burst buffers, the
+the caching operations under burst buffers is agnostic to the applications.
+Hence, the applications can benefit from the two-level of storage hierarchy
+without knowing the underlying operations.
+ 
+An overview of I/O burst buffer architecture is described in this section.
+As we mentioned in the previous section, our model takes advantage of high
+throughput inside a system, and use buffer queue system in order to increase
+throughput between two systems.
+%Two kinds of buffer are used in our I/O burst buffer architecture, the first one is in client computing node, first buffer user I/O in the same node, another one is in I/O buffer nodes.
+The main idea is that some of computing nodes serve as a I/O buffer nodes in
+each system, for write I/O data, if buffer queue in I/O buffer nodes is not
+full, data can first be buffered in buffer queue in the same system, and then
+client can finish write operation without waiting data be finally transferred
+to storage system.
+Actually, since many jobs use multiple nodes work together and the output of
+some nodes can be the input of the others, so for most cases, output data will
+still be buffered in buffer queue until the whole job finished.
+As for reading, if that file is stored in the buffer queue, compute nodes can
+read from I/O nodes through interconnection network.
+In other cases (buffer queue is full when issue a write request or requested
+file is not stored in buffer queue when issue a read request we call it cache
+miss), a read from or write back operation described below will be executed.
+
 \subsection{I/O operations}
 \kento{
 \begin{itemize}
@@ -37,15 +96,7 @@ written in ``Users' manual'', not ``Developers' document''}
 \end{itemize}
 }
 
-An overview of I/O burst buffer architecture is described in this section.
-As we mentioned in the previous section, our model takes advantage of high
-throughput inside a system, and use buffer queue system in order to increase throughput between two systems.
-%Two kinds of buffer are used in our I/O burst buffer architecture, the first one is in client computing node, first buffer user I/O in the same node, another one is in I/O buffer nodes.
-The main idea is that some of computing nodes serve as a I/O buffer nodes in each system, for write I/O data, if buffer queue in I/O buffer nodes is not full, data can first be buffered in buffer queue in the same system, and then client can finish write operation without waiting data be finally transferred to storage system.
-Actually, since many jobs use multiple nodes work together and the output of some nodes can be the
-input of the others, so for most cases, output data will still be buffered in buffer queue until the whole job finished.
-As for reading, if that file is stored in the buffer queue, compute nodes can read from I/O nodes through interconnection network.
-In other cases (buffer queue is full when issue a write request or requested file is not stored in buffer queue when issue a read request we call it cache miss), a read from or write back operation described below will be executed. 
+
 
 \subsection{Target Environment}
 First, we introduce our target environment.
@@ -59,12 +110,6 @@ we target at common cloud environment like Amazon EC2, which compute node and da
 
 \subsection{I/O Burst Buffer Architecture}
 
-\begin{figure}[tb]
-	\centering
-	\includegraphics[width=8cm]{img/architecture_overview}
-	\caption{overall illustrate of I/O Burst Buffer Architecture}
-	\label{architecture:overview}
-\end{figure}
 
 There are two kinds of nodes in our I/O burst buffer architecture: \emph{compute nodes} and \emph{I/O burst nodes}, compute nodes run user's application and I/O burst nodes.
 Public clouds usually provide several type of instance for difference purpose, some are compute
