--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -129,13 +129,14 @@ throughput in cloud storage.
 \par
 \kento{will correct legend}
 Figure \ref{background:amazon s3 read write same file} shows I/O throughputs
-with different numbers of nodes which read or write to a single file, i.e, $N-1$ I/O. 
+with different numbers of nodes which read or write to a single file, i.e.,
+$N-1$ I/O.
 As shown, the I/O throughputs are only 150 MB/s even in the best case of read,
 which degrades performance of data intensive workloads. 
 Figure \ref{background:amazon s3 read write different file} shows I/O
 throughputs with different numbers of nodes which read or write to their
-individual files, i.e, $N-N$ I/O. If each node read or write to their individual
-files, we see improvement in scalability compared to $N-1$ I/O. 
+individual files, i.e., $N-N$ I/O. If each node read or write to their
+individual files, we see improvement in scalability compared to $N-1$ I/O. 
 However, the improvement is limited. Especially, write performance does not
 scale to the number of nodes. From the figures, we also see that the I/O
 performance is fairly unstable. Because typical data intensive applications consist of
@@ -242,7 +243,7 @@ As in the figure, we can see that the I/O patterns of the three applications
 shows high buffered I/O rations. For example, The rations of Montage and POV-Ray
 are over 95\%, and the ration of supernovae is over 80\%.
 Because we assume enough size of the buffer size, all write operations data can
-be buffered, i.e., $w_{b} = w{t}$.
+be buffered, i.e., $w_{b} = w_{t}$.
 \kento{XU: Is this correct ?}
  In addition, the three applications
 read all data which is written by another process as intermediate data, which
